--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
-      
-        <a href="{{ site.github.zip_url }}" class="btn">Pipelines</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Source Code</a>
+        <a href="/" class="btn">Home</a>
+        <a href="/pages/pipelines" class="btn">Pipelines</a>
+        <a href="https://github.com/DarkRisings/src" class="btn">Source Code</a>
       
     </section>
 
