--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,15 +11,16 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-      {% if site.github.is_project_page %}
-        <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
-      {% endif %}
-        <a href="/" class="btn">Home</a>
-        <a href="/pages/pipelines" class="btn">Pipelines</a>
-        <a href="https://github.com/DarkRisings/src" class="btn">Source Code</a>
-      
+      <section class="inner"> 
+        <section class="page_title_main">
+          <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+        </section>
+        <section class="header_nav">
+          <a href="/" class="btn">Home</a>
+          <a href="/pages/pipelines" class="btn">Pipelines</a>
+          <a href="https://github.com/DarkRisings/src" class="btn">Source Code</a>
+        </section>
+      </section>
     </section>
 
     <section class="main-content">
