--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
           <a href="/pages/pipelines" class="btn">Pipelines</a>
           <a href="https://github.com/DarkRisings/src" class="btn">Source Code</a>
         </section>
+        Join the resistance at 174.138.76.27:1313
       </section>
     </section>
 
