--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,9 @@
 
     <section class="main-content">
       {{ content }}
-  
+        
+      <br>
+      {% if page.comments %}
         <div id="disqus_thread"></div>
         <script>
           (function() { // DON'T EDIT BELOW THIS LINE
@@ -39,7 +41,7 @@
         <noscript>
           Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
         </noscript>
-    
+    {% endif %}
 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
