--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         
       <br>
 
-      <% if (page.path.indexOf('pipelines')) { %>
+      <% if (page.path.indexOf('pipelines') > -1) { %>
         <div id="disqus_thread"></div>
         <script>
           (function() { // DON'T EDIT BELOW THIS LINE
