--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         
       <br>
 
-      <% if page.url == "/pipelines/guilds" %>
+      {% if page.url == "/pipelines/guilds" %}
         <div id="disqus_thread"></div>
         <script>
           (function() { // DON'T EDIT BELOW THIS LINE
